Updated service.html file with a new section

--- a/service.html
+++ b/service.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Here are our services</h1>
     <p>We added some of the service html pages</p>
+    <h2>Am adding new changes to my file</h2>
+    <p>Am aiming at learning to do the pull requests.</p>
 </body>
 </html>
