--- a/service.html
+++ b/service.html
@@ -10,5 +10,6 @@
     <p>We added some of the service html pages</p>
     <h2>Am adding new changes to my file</h2>
     <p>Am aiming at learning to do the pull requests.</p>
+    <p>But it is kinda crazy</p>
 </body>
 </html>
